--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Evan Dorsky",
   "license": "ISC",
   "dependencies": {
-    "d3": "^3.5.5"
+    "d3": "^3.5.5",
+    "lazy.js": "^0.4.0",
+    "math": "0.0.3"
   }
 }
